# LamarckiAnt

./: .gitignore  .hgignore  README  README.rst
AMBER12/: amber12_interface.F90
ANIMATE/: README.rst  animate_ants.pl  animate_trails.pl
BLAS/: CMakeLists.txt  Makefile  make.inc
DOC/: GMIN.tex  GMINdoc.bib  PHE.eps  PHE.fig  jnames.aux  jnames.tex  ltm  makefile  thesis.bst
EXAMPLE/LamarckiAnt/: BLNsequence  coords  data
GMIN/compiler_warnings/nag_warnings/: arithmetic_if  bad_edit_descriptor  computed_goto  double_to_single  dummy_not_set  extensions  fixed_source  low_precision  nab_errors  not_an_array  other_warnings  referenced_unset  shared_do_label  statement_function  unfinished_do  unused_dummy  unused_imports  unused_local  unused_pointer
GMIN/source/: AT.f  Ackland_metals.f90  Ackland_wrapper.f  Alglue.f  BGupta.f90  BLJcluster.f  BLJcluster_nocut.f90  BLN.f  CMakeLists.txt  CSMinit.f90  DF1.f  EAMLJ_sub.f  EAMal.f  Energy_1d_APBC.f90  Energy_1d_PBC.f90  Energy_2d_APBC.f90  Energy_2d_PBC.f90  Energy_3d_APBC.f90  Energy_3d_PBC.f90  FS.f  Farkas.f  GLJ.f90  GMINdump.f90  Gthomson.f90  Gupta.f  JM.f  LB2.f  MB.f  MGupta.f90  MLJ.f90  MSC.f90  MSorig.f  MSorigc.f  MStrans.97.f  Makefile  Mgglue.f  Natb.f90  PachecoC60.f  Pbglue.f  PythonGMIN.cmake  (+266 more)
GMIN/source/AMBER/: CMakeLists.txt
GMIN/source/AMH/: CMakeLists.txt  E_write.f90  Makefile  Q_bias_seg_a.f  Q_bias_seg_b.f  Rg_bias.f90  SLARNV.f  SLARUV.f  additive_ev.f  altpot_interfaces.f90  altpot_io.f90  altpot_onebody.f90  altpot_pairpotential.f90  altpot_subroutines.f90  altpot_utilities.f90  amh_interfaces.f90  amhglobals.f  contact_P_AP.f90  dssp_hdrgn_eastwood.f  dssp_hforce.f  ev_gamma.f90  ev_set_up.f90  force.f  gaspot.f  gaussv.f  gaussw.f  gengrd.f  gentab.f  getmem.f  globals_alt.f90  gomb.f  harm_spring.f  hdrgn.f90  hforce.f  hprofl.f  initil.f  intstr.f  lookup.f  make.inc  non_add_contact.f90  (+18 more)
GMIN/source/DMACRYSinterface/: CMakeLists.txt  cell_reduction.f90  dma_minimize.f90  dmacrys.f90  dmacrys_interface.f90  overlap.f90  plutoincludes
GMIN/source/OPEPinterface/: CMakeLists.txt  OPEP_userpot.f90  RNA-2006.f  art_main_module.f90  art_read_parameters.f90  calcforce.f90  defs.F90  fileio.f90  geometric_corrections.f90  ion_pair.f90  lanczos.F90  matrix_mod.f90  md_initialise.F90  md_main_module.f90  md_read_parameters.f90  md_utils.f90  mdmin.f90  other-2006-new.f  other-2010-RNA.f90  protein-2006.f  random.f90  read_parameters.F90  (+7 more)
GMIN/source/OXDNAinterface/: CMakeLists.txt  ExternalForce.cpp  ExternalForce.h  GMINDNABackend.cpp  GMINDNABackend.h  GMINDNAManager.cpp  GMINDNAManager.h  IOManager.cpp  IOManager.h  Interaction.cpp  Interaction.h  MCBackend.cpp  MCBackend.h  MC_CPUBackend.cpp  MC_CPUBackend.h  MDBackend.cpp  MDBackend.h  MD_CPUBackend.cpp  MD_CPUBackend.h  Particle.cpp  Particle.h  SimBackend.cpp  SimBackend.h  SimManager.cpp  SimManager.h  Utils.cpp  Utils.h  defs.h  model.h  oxdna.f90  parse_input.c  test.cpp  time_scales.c  timing.c
GMIN/source/Testing/: CMakeLists.txt  README
GMIN/source/Testing/AMBGMIN/: CMakeLists.txt
GMIN/source/Testing/AMBGMIN/run1/: GMIN_out.ref  README  data  run.sh
GMIN/source/Testing/DMACRYS/: CMakeLists.txt
GMIN/source/Testing/DMACRYS/basic/: CMakeLists.txt  reduction.f90
GMIN/source/Testing/DMACRYS/benzene/: data
GMIN/source/Testing/amber/: CMakeLists.txt
GMIN/source/Testing/basic/: CMakeLists.txt  testrot.f90
GMIN/source/Testing/binary/: CMakeLists.txt  testing.f90
GMIN/source/Testing/binary/freeze/: data
GMIN/source/Testing/binary/test1/: data
GMIN/source/Testing/example/: CMakeLists.txt  testing.f90
GMIN/source/Testing/example2/: CMakeLists.txt
GMIN/source/Testing/example2/run1/: coords  data
GMIN/source/Testing/harmonicf/: CMakeLists.txt  Etrue  Vtrue  testing.f90
GMIN/source/Testing/ljpshift/: CMakeLists.txt  Etrue  Vtrue  coords  data  testing.f90
GMIN/source/Testing/overlap/: CMakeLists.txt  coords  coords2  data  testing.f90
GMIN/source/Testing/scripts/: check_energy.sh
GMIN/source/Testing/soft_sphere/: CMakeLists.txt  Etrue  Vtrue  coords  data  testing.f90
GMIN/source/libmbpol/: CMakeLists.txt  Makefile  libmbpol.cpp  mbpol.cpp  x3b-v2x.cpp
GMIN/source/unused_files/: BGupta.f.old  CMakeLists.txt  amhdummy.f  amhdummy_cmake.f  array_swap.f90  bipartite.f90  blas.f  bmin.f  bspt.F.2013_04_08.save  bspt.F.clust  bspt.F.different  bspt.F.save  bsptsave.F  charmmBildc.f  compress2.f  dblpy.f90  dfuncs.f90  dlamch.f  evstep.f  fsc1TH.f90  funcs.f90  gmin_quip_wrapper.f90  io.f90  io_sanity.f90  lapack.f  lbfgs.f  mc.F.clust  mc.F.meddle  mc.f.mpi  mek-quake.f90  mf.f  mind.f  molinfo.f90  newmindist.f90.save  nonATLASblas.f  olami.f  otp.f  porfuncs.csh  ptbs.f  ptmc.F  (+24 more)
LAPACK/: CMakeLists.txt  Makefile  dlasq3.f  dlasyf.f  dsytf2.f  dtptri.f  ilaenv.f  make.inc
SCRIPTS/AMH/: Rg.f  add_gly.f90  calc_order.sh  calc_rama.f  extract_order.sh  extractts_chaincrossing.f90  nebxyz2pdb_amh.f90  path_setup.sh  pdb2wolynes.f90  pdb2xyz.f90  qscore.f  qscore_script  xyz2movieseg.f90  xyz2pdb.f90  xyz2pdb_amh.f90  xyz_chaincrossing.f90
SCRIPTS/CHARMM/: groupRigidBodyINC_CHARMM22.f90  points2pdb_combined.py  standardize_crd.py
SCRIPTS/DISCONNECT/: findmin.sh
SCRIPTS/GMIN/: make_lj.py
SCRIPTS/OPTIM/: editit.h2o.f  makexyz.f
SCRIPTS/PATHSAMPLE/: _compute_rates_utils.py  calcorder.sh  committor_to_colourlist.f90  compute_rates.py  getmetricordered.f90  pathdata.template  pele_gui_amber.py  qsub.template  rates.AMH.friction.f90  rates.CHARMM.friction.f90  rates.f90  redots.csh  visualise_UNTRAP.sh
SCRIPTS/all/: display_version.sh  find_subroutines.py  mkf  svn_revision.sh
SCRIPTS/make_perm.allow/: INFO  perm-pdb-ua.py  perm-pdb.py
SCRIPTS/op/: Doxyfile.full  bu  bu_compose_makefile.sh  bu_get_mav.sh  bu_load_compiler.sh  bu_set_mod_home.sh  bu_split_compiler_name.sh  bug  buo  bup  buu  cf  cpf  decom  f.sh  gop  h  sh_header.sh  sv  vf  vf_fill_files.sh
SCRIPTS/python/: README  setup.py
SCRIPTS/visuals/: chir2py.py  ell2py.py  plotGMIN.tcl  plotGMINms.tcl  plotGMINmspath.tcl  plotchiro.tcl
(+85 files in other folders)
